--- a/index.html
+++ b/index.html
@@ -5,12 +5,42 @@
     <meta charset="utf-8">
     <title>КИТ</title>
     <!-- <link href="css/normalize.css" rel="stylesheet"> -->
-
     <!-- <link href="css/style.min.css" rel="stylesheet"> -->
   </head>
 
   <body>
 
+    <header class="main-header">
+
+    </header>
+
+    <section class="main-services">
+
+    </section>
+
+    <section class="contacts">
+
+    </section>
+
+    <section class="our-works">
+
+    </section>
+
+    <section class="review">
+
+    </section>
+
+    <section class="our-team">
+
+    </section>
+
+    <section class="say-hello">
+
+    </section>
+
+    <footer class="main-footer">
+
+    </footer>
 
   </body>
 
