--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
 
     <header class="main-header">
 
+      <nav class="main-header__navigation">
+
+        <img class="ma" src="#" alt="Логотип ООО КИТ">
+
+        <a href="#">Меню?</a>
+
+      </nav>
+
+      <h1>We design <span>things</span></h1>
+
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+
+      <a href="#"></a>
+
     </header>
 
     <section class="main-services">
