--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
 
       <nav class="main-header__navigation">
 
-        <img class="ma" src="#" alt="Логотип ООО КИТ">
-
-        <a href="#">Меню?</a>
+        <img class="main-header__logo" src="#" alt="Логотип ООО КИТ">
+        <!-- WIDTH - HEIGHT?? -->
+        <a href="#" class="main-header__menu">Меню?</a>
 
       </nav>
 
-      <h1>We design <span>things</span></h1>
+      <h1 class="main-header__slogan">We design <span class="main-header__slogan--highlighted">things</span></h1>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+      <p class="main-header__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
 
-      <a href="#"></a>
+      <a href="#" class="main-header__hire-us">Hire us</a>
+      <a href="#" class="main-header__our-works">Hire us</a>
 
     </header>
 
