--- a/index.html
+++ b/index.html
@@ -31,9 +31,31 @@
 
     <section class="main-services">
 
+      <dl class="main-services__service-list">
+
+        <dt class="main-services__service-term">Print design</dt>
+        <dd class="main-services__service-definition">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</dd>
+
+        <dt class="main-services__service-term">Web design</dt>
+        <dd class="main-services__service-definition">Incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</dd>
+
+        <dt class="main-services__service-term">App design</dt>
+        <dd class="main-services__service-definition">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</dd>
+
+        <dt class="main-services__service-term">Logo design</dt>
+        <dd class="main-services__service-definition">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu</dd>
+
+      </dl>
+
     </section>
 
     <section class="contacts">
+
+      <address class="contacts__address">
+
+        
+
+      </address>
 
     </section>
 
