--- a/index.html
+++ b/index.html
@@ -53,9 +53,17 @@
 
       <address class="contacts__address">
 
-        
+        <h2 class="contacts__location">Our location</h2>
+        <p class="contacts__address-paragraph">
+          Duis aute irure dolor in reprehenderit
+          in voluptate velit esse cillum dolore
+          eu fugiat nulla pariatur
+        </p>
 
       </address>
+
+      <div class="contacts__map">
+      </div>
 
     </section>
 
