--- a/index.html
+++ b/index.html
@@ -62,12 +62,14 @@
 
       </address>
 
-      <div class="contacts__map">
-      </div>
+      <div class="contacts__map"></div>
 
     </section>
 
     <section class="our-works">
+
+      <h2 class="our-works__header">Our <span class="our-works__header--highlighted">works</span></h2>
+      <p class="our-works__description"></p>
 
     </section>
 
