--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <address class="contacts__address">
 
-        <h2 class="contacts__location">Our location</h2>
+        <h1 class="contacts__location">Our location</h1>
         <p class="contacts__address-paragraph">
           Duis aute irure dolor in reprehenderit
           in voluptate velit esse cillum dolore
@@ -68,8 +68,44 @@
 
     <section class="our-works">
 
-      <h2 class="our-works__header">Our <span class="our-works__header--highlighted">works</span></h2>
-      <p class="our-works__description"></p>
+      <h1 class="our-works__header">Our <span class="our-works__header--highlighted">works</span></h1>
+      <p class="our-works__description">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+
+      <div class="our-works__item">
+        <h2 class="our-works__item-header">Abazoo website</h2>
+        <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+        <a href="#" class="our-works__item-link">Show project</a>
+      </div>
+
+      <div class="our-works__item">
+        <h2 class="our-works__item-header">Abazoo website</h2>
+        <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+        <a href="#" class="our-works__item-link">Show project</a>
+      </div>
+
+      <div class="our-works__item">
+        <h2 class="our-works__item-header">Abazoo website</h2>
+        <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+        <a href="#" class="our-works__item-link">Show project</a>
+      </div>
+
+      <div class="our-works__item">
+        <h2 class="our-works__item-header">Abazoo website</h2>
+        <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+        <a href="#" class="our-works__item-link">Show project</a>
+      </div>
+
+      <div class="our-works__item">
+        <h2 class="our-works__item-header">Abazoo website</h2>
+        <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+        <a href="#" class="our-works__item-link">Show project</a>
+      </div>
+
+      <div class="our-works__item">
+        <h2 class="our-works__item-header">Abazoo website</h2>
+        <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+        <a href="#" class="our-works__item-link">Show project</a>
+      </div>
 
     </section>
 
