--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
 
     <section class="review">
 
+      <!-- Width height? -->
       <img src="#" alt="John Smith" class="review__photo">
       <q class="review__quote">These guys are incredible! I get my project in 10 days and it was awesome! Very good service! Highly recommended!</q>
       <cite class="review__cite">John Smith</cite>
