--- a/index.html
+++ b/index.html
@@ -120,6 +120,34 @@
 
     <section class="our-team">
 
+      <h1 class="our-team__header">Our <span class="our-team__header--highlighted">team</span></h1>
+      <p class="our-team__description">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+
+      <div class="our-team__item">
+        <!-- WIDTH HEIGHT?  -->
+        <img src="#" alt="Catherina Gail" class="our-team__item-pic">
+        <h2 class="our-team__item-header">Catherina Gail</h2>
+        <p class="our-team__item-description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+      </div>
+
+      <div class="our-team__item">
+        <img src="#" alt="Harvey Rube" class="our-team__item-pic">
+        <h2 class="our-team__item-header">Harvey Rube</h2>
+        <p class="our-team__item-description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+      </div>
+
+      <div class="our-team__item">
+        <img src="#" alt="Kevin Ward" class="our-team__item-pic">
+        <h2 class="our-team__item-header">Kevin Ward</h2>
+        <p class="our-team__item-description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+      </div>
+
+      <div class="our-team__item">
+        <img src="#" alt="Janet Pris" class="our-team__item-pic">
+        <h2 class="our-team__item-header">Janet Pris</h2>
+        <p class="our-team__item-description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+      </div>
+
     </section>
 
     <section class="say-hello">
