--- a/index.html
+++ b/index.html
@@ -152,6 +152,23 @@
 
     <section class="say-hello">
 
+      <h1 class="say-hello__header">Say <span class="say-hello__header--highlighted">hello</span></h1>
+      <p class="say-hello__description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+
+      <form class="say-hello__form" action="https://echo.htmlacademy.ru" method="post">
+
+        <input class="say-hello__input" type="email" name="email" id="email" value="" placeholder="Your email" required>
+        <!-- <label for="contact_email" class="placeholder">Ваша почта для ответа?</label> -->
+
+        <input class="say-hello__input" type="text" name="subject" id="subject" value="" placeholder="Subject" required>
+        <!-- <label for="contact_name" class="placeholder">Как Вас зовут?</label> -->
+
+        <textarea class="say-hello__area" name="message" rows="8" cols="80" id="message" placeholder="Your message" required></textarea>
+        <!-- <label for="contact_message" class="placeholder">Напишите что-нибудь...</label> -->
+
+        <button class="say-hello__submit" type="submit">Отправить</button>
+      </form>
+
     </section>
 
     <footer class="main-footer">
