--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
     <footer class="main-footer">
 
-      <p class="main-footer__copyright">&copy; 2017 КИТ</p>
+      <p class="main-footer__copyright">Компания интеграционных технологий &copy; 2017</p>
 
     </footer>
 
