--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>КИТ</title>
-    <!-- <link href="css/normalize.css" rel="stylesheet"> -->
-    <link href="css/test.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
 
   <body>
