Пытаемся делать  хедер

--- a/app/index.html
+++ b/app/index.html
@@ -11,20 +11,27 @@
 
     <header class="main-header">
 
-      <nav class="main-header__navigation">
+      <div class="main-header__wrapper">
 
-        <img class="main-header__logo" src="#" alt="Логотип ООО КИТ">
-        <!-- WIDTH - HEIGHT?? -->
-        <a href="#" class="main-header__menu">Меню?</a>
+        <nav class="main-header__navigation">
 
-      </nav>
+          <!-- <img class="main-header__logo" src="#" alt="Логотип ООО КИТ"> -->
+          <!-- WIDTH - HEIGHT?? -->
 
-      <h1 class="main-header__slogan">We design <span class="main-header__slogan--highlighted">things</span></h1>
+          <a class="main-header__company">ООО <span class="main-header__company--highlighted">КИТ</span></a>
 
-      <p class="main-header__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+          <a href="#" class="main-header__menu">Menu</a>
 
-      <a href="#" class="main-header__hire-us">Hire us</a>
-      <a href="#" class="main-header__our-works">Hire us</a>
+        </nav>
+
+        <h1 class="main-header__slogan">We design <span class="main-header__slogan--highlighted">things</span></h1>
+
+        <p class="main-header__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+
+        <a href="#" class="main-header__hire-us">Hire us</a>
+        <a href="#" class="main-header__our-works">Hire us</a>
+
+      </div>
 
     </header>
 
