--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>КИТ</title>
     <link href="css/style.min.css" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,700,800&amp;subset=cyrillic" rel="stylesheet"> -->
   </head>
 
   <body>
@@ -20,16 +21,19 @@
 
           <a class="main-header__company">ООО <span class="main-header__company--highlighted">КИТ</span></a>
 
-          <a href="#" class="main-header__menu">Menu</a>
+          <a href="#" class="main-header__menu">Меню</a>
 
         </nav>
 
-        <h1 class="main-header__slogan">We design <span class="main-header__slogan--highlighted">things</span></h1>
+        <div class="main-header__slogan-container">
+          <img class="main-header__logo" src="img/logo.svg" width="300" height="100">
+          <h1 class="main-header__slogan">Компания<br> интеграционных<br> технологий</h1>
 
-        <p class="main-header__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
+          <p class="main-header__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
 
-        <a href="#" class="main-header__hire-us">Hire us</a>
-        <a href="#" class="main-header__our-works">Hire us</a>
+          <a href="#" class="main-header__hire-us">Hire us</a>
+          <a href="#" class="main-header__our-works">Our works</a>
+        </div>
 
       </div>
 
@@ -39,17 +43,22 @@
 
       <dl class="main-services__service-list">
 
-        <dt class="main-services__service-term">Print design</dt>
-        <dd class="main-services__service-definition">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</dd>
-
-        <dt class="main-services__service-term">Web design</dt>
-        <dd class="main-services__service-definition">Incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</dd>
-
-        <dt class="main-services__service-term">App design</dt>
-        <dd class="main-services__service-definition">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</dd>
-
-        <dt class="main-services__service-term">Logo design</dt>
-        <dd class="main-services__service-definition">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu</dd>
+        <div class="main-services__service-item">
+          <dt class="main-services__service-term">Print design</dt>
+          <dd class="main-services__service-definition">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</dd>
+        </div>
+        <div class="main-services__service-item">
+          <dt class="main-services__service-term">Web design</dt>
+          <dd class="main-services__service-definition">Incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</dd>
+        </div>
+        <div class="main-services__service-item">
+          <dt class="main-services__service-term">App design</dt>
+          <dd class="main-services__service-definition">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</dd>
+        </div>
+        <div class="main-services__service-item">
+          <dt class="main-services__service-term">Logo design</dt>
+          <dd class="main-services__service-definition">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu</dd>
+        </div>
 
       </dl>
 
