--- a/app/index.html
+++ b/app/index.html
@@ -43,19 +43,19 @@
 
       <dl class="main-services__service-list">
 
-        <div class="main-services__service-item">
+        <div class="main-services__service-item main-services__service-item--printer-icon">
           <dt class="main-services__service-term">Print design</dt>
           <dd class="main-services__service-definition">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</dd>
         </div>
-        <div class="main-services__service-item">
+        <div class="main-services__service-item main-services__service-item--desktop-icon">
           <dt class="main-services__service-term">Web design</dt>
           <dd class="main-services__service-definition">Incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</dd>
         </div>
-        <div class="main-services__service-item">
+        <div class="main-services__service-item main-services__service-item--mobile-icon">
           <dt class="main-services__service-term">App design</dt>
           <dd class="main-services__service-definition">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</dd>
         </div>
-        <div class="main-services__service-item">
+        <div class="main-services__service-item main-services__service-item--ruler-icon">
           <dt class="main-services__service-term">Logo design</dt>
           <dd class="main-services__service-definition">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu</dd>
         </div>
