Contacts section started

--- a/app/index.html
+++ b/app/index.html
@@ -66,18 +66,22 @@
 
     <section class="contacts">
 
-      <address class="contacts__address">
+      <div class="contacts__wrapper">
 
-        <h1 class="contacts__location">Our location</h1>
-        <p class="contacts__address-paragraph">
-          Duis aute irure dolor in reprehenderit
-          in voluptate velit esse cillum dolore
-          eu fugiat nulla pariatur
-        </p>
+        <address class="contacts__address">
 
-      </address>
+          <h1 class="contacts__location">Our location</h1>
+          <p class="contacts__address-paragraph">
+            Duis aute irure dolor in reprehenderit
+            in voluptate velit esse cillum dolore
+            eu fugiat nulla pariatur
+          </p>
 
-      <div class="contacts__map"></div>
+        </address>
+
+        <div class="contacts__map"></div>
+
+      </div>
 
     </section>
 
