--- a/app/index.html
+++ b/app/index.html
@@ -70,11 +70,10 @@
 
         <address class="contacts__address">
 
-          <h1 class="contacts__location">Our location</h1>
+          <h1 class="contacts__location">Our <span class="contacts__location--highlighted">location</span></h1>
+
           <p class="contacts__address-paragraph">
-            Duis aute irure dolor in reprehenderit
-            in voluptate velit esse cillum dolore
-            eu fugiat nulla pariatur
+            685000, г.Магадан, ул. Ленина, д. 281A
           </p>
 
         </address>
