our works started

--- a/app/index.html
+++ b/app/index.html
@@ -86,43 +86,51 @@
 
     <section class="our-works">
 
-      <h1 class="our-works__header">Our <span class="our-works__header--highlighted">works</span></h1>
-      <p class="our-works__description">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+      <div class="our-works__wrapper">
 
-      <div class="our-works__item">
-        <h2 class="our-works__item-header">Abazoo website</h2>
-        <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-        <a href="#" class="our-works__item-link">Show project</a>
-      </div>
+        <h1 class="our-works__header">Our <span class="our-works__header--highlighted">works</span></h1>
+        <p class="our-works__description">Ut enim ad minim veniam, quis nostrud exercitation ullamco<br> laboris nisi ut aliquip ex ea commodo consequat</p>
 
-      <div class="our-works__item">
-        <h2 class="our-works__item-header">Abazoo website</h2>
-        <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-        <a href="#" class="our-works__item-link">Show project</a>
-      </div>
+        <div class="our-works__items-list">
 
-      <div class="our-works__item">
-        <h2 class="our-works__item-header">Abazoo website</h2>
-        <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-        <a href="#" class="our-works__item-link">Show project</a>
-      </div>
+          <div class="our-works__item">
+            <h2 class="our-works__item-header">Abazoo website</h2>
+            <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+            <a href="#" class="our-works__item-link">Show project</a>
+          </div>
 
-      <div class="our-works__item">
-        <h2 class="our-works__item-header">Abazoo website</h2>
-        <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-        <a href="#" class="our-works__item-link">Show project</a>
-      </div>
+          <div class="our-works__item">
+            <h2 class="our-works__item-header">Abazoo website</h2>
+            <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+            <a href="#" class="our-works__item-link">Show project</a>
+          </div>
 
-      <div class="our-works__item">
-        <h2 class="our-works__item-header">Abazoo website</h2>
-        <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-        <a href="#" class="our-works__item-link">Show project</a>
-      </div>
+          <div class="our-works__item">
+            <h2 class="our-works__item-header">Abazoo website</h2>
+            <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+            <a href="#" class="our-works__item-link">Show project</a>
+          </div>
 
-      <div class="our-works__item">
-        <h2 class="our-works__item-header">Abazoo website</h2>
-        <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-        <a href="#" class="our-works__item-link">Show project</a>
+          <div class="our-works__item">
+            <h2 class="our-works__item-header">Abazoo website</h2>
+            <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+            <a href="#" class="our-works__item-link">Show project</a>
+          </div>
+
+          <div class="our-works__item">
+            <h2 class="our-works__item-header">Abazoo website</h2>
+            <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+            <a href="#" class="our-works__item-link">Show project</a>
+          </div>
+
+          <div class="our-works__item">
+            <h2 class="our-works__item-header">Abazoo website</h2>
+            <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+            <a href="#" class="our-works__item-link">Show project</a>
+          </div>
+
+        </div>
+
       </div>
 
     </section>
