styled our works

--- a/app/index.html
+++ b/app/index.html
@@ -94,40 +94,51 @@
         <div class="our-works__items-list">
 
           <div class="our-works__item our-works__item1">
-            <!-- Запилить враппер для скрытой планки??? -->
-            <h2 class="our-works__item-header">Abazoo website</h2>
-            <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-            <a href="#" class="our-works__item-link">Show project</a>
+            <div class="our-works__item--hover">
+              <h2 class="our-works__item-header">Abazoo website</h2>
+              <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+              <a href="#" class="our-works__item-link">Show project</a>
+            </div>
           </div>
 
           <div class="our-works__item our-works__item2">
-            <h2 class="our-works__item-header">Abazoo website</h2>
-            <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-            <a href="#" class="our-works__item-link">Show project</a>
+            <div class="our-works__item--hover">
+              <h2 class="our-works__item-header">Abazoo website</h2>
+              <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+              <a href="#" class="our-works__item-link">Show project</a>
+            </div>
           </div>
 
           <div class="our-works__item our-works__item3">
-            <h2 class="our-works__item-header">Abazoo website</h2>
-            <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-            <a href="#" class="our-works__item-link">Show project</a>
+            <div class="our-works__item--hover">
+              <h2 class="our-works__item-header">Abazoo website</h2>
+              <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+              <a href="#" class="our-works__item-link">Show project</a>
+            </div>
           </div>
 
           <div class="our-works__item our-works__item4">
-            <h2 class="our-works__item-header">Abazoo website</h2>
-            <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-            <a href="#" class="our-works__item-link">Show project</a>
+            <div class="our-works__item--hover">
+              <h2 class="our-works__item-header">Abazoo website</h2>
+              <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+              <a href="#" class="our-works__item-link">Show project</a>
+            </div>
           </div>
 
           <div class="our-works__item our-works__item5">
-            <h2 class="our-works__item-header">Abazoo website</h2>
-            <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-            <a href="#" class="our-works__item-link">Show project</a>
+            <div class="our-works__item--hover">
+              <h2 class="our-works__item-header">Abazoo website</h2>
+              <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+              <a href="#" class="our-works__item-link">Show project</a>
+            </div>
           </div>
 
           <div class="our-works__item our-works__item6">
-            <h2 class="our-works__item-header">Abazoo website</h2>
-            <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-            <a href="#" class="our-works__item-link">Show project</a>
+            <div class="our-works__item--hover">
+              <h2 class="our-works__item-header">Abazoo website</h2>
+              <p class="our-works__item-description">Quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+              <a href="#" class="our-works__item-link">Show project</a>
+            </div>
           </div>
 
         </div>
