Секция отзывов стилизована

--- a/app/index.html
+++ b/app/index.html
@@ -149,10 +149,23 @@
 
     <section class="review">
 
-      <!-- Width height? -->
-      <img src="#" alt="John Smith" class="review__photo">
-      <q class="review__quote">These guys are incredible! I get my project in 10 days and it was awesome! Very good service! Highly recommended!</q>
-      <cite class="review__cite">John Smith</cite>
+      <div class="review__item review__item--hidden">
+        <img src="img\Elipsa-2.png" width="100" height="100" alt="John Smith" class="review__photo">
+        <q class="review__quote">These guys are incredible! I get my project in 10 days and it was awesome! Very good service! Highly recommended!</q>
+        <cite class="review__cite">John Smith</cite>
+      </div>
+
+      <div class="review__item review__item--hidden">
+        <img src="img\Elipsa-1.png" width="100" height="100" alt="John Smith" class="review__photo">
+        <q class="review__quote">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi</q>
+        <cite class="review__cite">John Smith</cite>
+      </div>
+
+      <div class="review__item">
+        <img src="img\Elipsa-2.png" width="100" height="100" alt="John Smith" class="review__photo">
+        <q class="review__quote">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</q>
+        <cite class="review__cite">John Smith</cite>
+      </div>
 
     </section>
 
