Our team styled successfully

--- a/app/index.html
+++ b/app/index.html
@@ -171,32 +171,39 @@
 
     <section class="our-team">
 
-      <h1 class="our-team__header">Our <span class="our-team__header--highlighted">team</span></h1>
-      <p class="our-team__description">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+      <div class="our-team__wrapper">
 
-      <div class="our-team__item">
-        <!-- WIDTH HEIGHT?  -->
-        <img src="#" alt="Catherina Gail" class="our-team__item-pic">
-        <h2 class="our-team__item-header">Catherina Gail</h2>
-        <p class="our-team__item-description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
-      </div>
+        <h1 class="our-team__header">Our <span class="our-team__header--highlighted">team</span></h1>
+        <p class="our-team__description">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
 
-      <div class="our-team__item">
-        <img src="#" alt="Harvey Rube" class="our-team__item-pic">
-        <h2 class="our-team__item-header">Harvey Rube</h2>
-        <p class="our-team__item-description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
-      </div>
+        <div class="our-team__items-list">
 
-      <div class="our-team__item">
-        <img src="#" alt="Kevin Ward" class="our-team__item-pic">
-        <h2 class="our-team__item-header">Kevin Ward</h2>
-        <p class="our-team__item-description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
-      </div>
+          <div class="our-team__item">
+            <img src="img\ha1.png" width="220" height="240" alt="Catherina Gail" class="our-team__item-pic">
+            <h2 class="our-team__item-header">Catherina Gail</h2>
+            <p class="our-team__item-description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+          </div>
 
-      <div class="our-team__item">
-        <img src="#" alt="Janet Pris" class="our-team__item-pic">
-        <h2 class="our-team__item-header">Janet Pris</h2>
-        <p class="our-team__item-description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+          <div class="our-team__item">
+            <img src="img\kev1.png" width="220" height="240" alt="Harvey Rube" class="our-team__item-pic">
+            <h2 class="our-team__item-header">Harvey Rube</h2>
+            <p class="our-team__item-description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+          </div>
+
+          <div class="our-team__item">
+            <img src="img\ha1.png" width="220" height="240" alt="Kevin Ward" class="our-team__item-pic">
+            <h2 class="our-team__item-header">Kevin Ward</h2>
+            <p class="our-team__item-description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+          </div>
+
+          <div class="our-team__item">
+            <img src="img\kev1.png" width="220" height="240" alt="Janet Pris" class="our-team__item-pic">
+            <h2 class="our-team__item-header">Janet Pris</h2>
+            <p class="our-team__item-description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+          </div>
+
+        </div>
+
       </div>
 
     </section>
@@ -225,7 +232,7 @@
 
     <footer class="main-footer">
 
-      <p class="main-footer__copyright">Компания интеграционных технологий &copy; 2017</p>
+      <p class="main-footer__copyright">Компания интеграционных технологий &copy;</p>
 
     </footer>
 
