--- a/index.html
+++ b/index.html
@@ -217,15 +217,9 @@
 
         <form class="say-hello__form" action="https://echo.htmlacademy.ru" method="post">
 
-          <input class="say-hello__input" type="email" name="email" id="email" value="" placeholder="Your email" required>
-          <!-- <label for="contact_email" class="placeholder">Ваша почта для ответа?</label> -->
-
-          <input class="say-hello__input" type="text" name="subject" id="subject" value="" placeholder="Subject" required>
-          <!-- <label for="contact_name" class="placeholder">Как Вас зовут?</label> -->
-
-          <textarea class="say-hello__area" name="message" rows="8" cols="80" id="message" placeholder="Your message" required></textarea>
-          <!-- <label for="contact_message" class="placeholder">Напишите что-нибудь...</label> -->
-
+          <input class="say-hello__input" type="email" name="email" id="email" value="" placeholder="Ваша почта для ответа" required>
+          <input class="say-hello__input" type="text" name="subject" id="subject" value="" placeholder="Тема письма" required>
+          <textarea class="say-hello__area" name="message" rows="8" cols="80" id="message" placeholder="Напишите что-нибудь.." required></textarea>
           <button class="say-hello__submit" type="submit">Отправить</button>
 
         </form>
