--- a/index.html
+++ b/index.html
@@ -230,7 +230,11 @@
 
     <footer class="main-footer">
 
-      <p class="main-footer__copyright">Компания интеграционных технологий &copy;</p>
+      <div class="main-footer__wrapper">
+
+        <p class="main-footer__copyright">Компания интеграционных технологий &copy;</p>
+
+      </div>
 
     </footer>
 
